# adaptive-algo-fund

./: .gitignore  IMPLEMENTATION.MD  INSTRUCTIONS.md  README.md  massive.ipynb  massive_graphs.ipynb  massive_investment_clock.ipynb  requirements.txt  run.ps1  setup.py  week1_baseline_selection.csv
[OLD]/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb
[OLD]/configs/: clustering.yaml  layers.yaml  personality.yaml  preprocess.yaml
[OLD]/src/: evaluate.py  train.py
[OLD]/src/agents/: baseline.py  dqn.py
[OLD]/src/athenai/: __init__.py
[OLD]/src/athenai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
[OLD]/src/athenai/clustering/: __init__.py  build_clusters.py  cluster_models.py  cluster_timeseries.py
[OLD]/src/athenai/core/: __init__.py  artifacts.py  config.py  logging.py  monitoring.py  utils_io.py  validation.py
[OLD]/src/athenai/factors/: __init__.py  config.py  exposures.py  factor_timeseries.py
[OLD]/src/athenai/features/: __init__.py  personality.py
[OLD]/src/athenai/layers/: __init__.py  config.py
[OLD]/src/athenai/macro/: __init__.py
[OLD]/src/athenai/pipelines/: __init__.py  clustering.py  full_pipeline.py  layers.py  personality.py  preprocess.py  rl_macro_wrapper.py
[OLD]/src/athenai/reports/: __init__.py  builder.py  inspector.py
[OLD]/src/notebooks_rl/: 00_exploracion_datos.ipynb
[OLD]/src/utils/: backtest.py  config.py  metrics.py  visualization.py
[OLD]/tests/: test_clustering_smoke.py  test_personality_smoke.py  test_preprocess_smoke.py
info/: Bases.md  (+2 more)
(+53 files in other folders)
